--- a/site/about.html
+++ b/site/about.html
@@ -27,7 +27,7 @@
         <li>Симуляция сложных кибератак (APT).</li>
         <li>Повышение осведомленности о кибергигиене.</li>
       </ul>
-      <img src="diagramma.png" alt="Диаграмма угроз" width="700">
+      <img src="image/diagramma.png" alt="Диаграмма угроз" width="700">
     </section>
   </div>
 </body>
