--- a/site/index.html
+++ b/site/index.html
@@ -21,9 +21,8 @@
     <section>
       <h2>Добро пожаловать в проект Киберполигон</h2>
       <p>Киберполигон — это проект в рамках дисциплины «Проектная деятельность», направленный на развитие навыков кибербезопасности через симуляцию кибератак. Наша команда разрабатывает и тестирует стратегии защиты цифровых инфраструктур.</p>
-      <img src="images/logo.png" alt="Логотип Киберполигон">
+      <img src="image/logo.jpg" alt="Логотип Киберполигон" width="700">
       <p>Ознакомьтесь с нашим проектом, вкладом участников и полезными ресурсами, чтобы узнать больше о вызовах и решениях в области кибербезопасности.</p>
     </section>
   </div>
 </body>
-</html>
