--- a/site/participants.html
+++ b/site/participants.html
@@ -26,7 +26,7 @@
         <li><strong>Ксения Петрова</strong>: Дизайнер и разработчик</li>
         <li><strong>Дарья Жаворонкова</strong>: Идейный вдохновитель</li>
       </ul>
-      <img src="we.png" alt="Фото команды" width="450">
+      <img src="image/we.png" alt="Фото команды" width="450">
     </section>
   </div>
 </body>
